2012-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (enum fcwd_version_t): Move here from path.cc.
	(class fcwd_access_t): Ditto.  Only declare methods.
	(class cwdstuff): Move fast_cwd_ptr and fast_cwd_version from shared
	DLL section here.
	* path.cc: Keep fcwd_access_t method definitions.
	(fcwd_access_t::fast_cwd_version): New method.
	(find_fast_cwd_pointer): Change comment.  Mention test on W8CP.
	(cwdstuff::init): Initialize fast_cwd_ptr and fast_cwd_version.

2012-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::operator[]): Extend comment a bit more to
	explain previous patch.

2012-03-04  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::alloc): Compare linked DLLs by basename only.
	Explain why.  Add code to check if a DLL with the same basename but
	different path is the same DLL.  Bail out if not.
	(in_load_after_fork): New static NO_COPY bool to allow to differ
	between linked and loaded DLL at fork.
	(dll_list::load_after_fork): Set in_load_after_fork accordingly.
	(dll_dllcrt0_1): Don't treat DLL as linked if in_load_after_fork is set.
	Drop test for in_forkee.

2012-03-04  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc: Revert pathname changes from 2012-02-08.
	(dll_list::operator[]): Add long comment to explain the misery.
	(dll_list::alloc): Skip long pathname prefix potentially returned by
	GetModuleFileNameW.
	* dll_init.h (dll_list::find_by_modname): Add back declaration.

2012-03-04  Corinna Vinschen  <corinna@vinschen.de>

	* winver.rc: Bump copyright date.

2012-03-03  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler_console.cc (fhandler_console::dup): Only set ctty when we
	haven't specifically called setsid.
	* fhandler_tty.cc (fhandler_pty_slave::dup): Ditto.  Also add comment
	documenting research into rxvt problem.
	* fhandler_termios.cc (fhandler_termios::tcsetpgrp): Don't check
	specifically for myself->ctty == -1.  Test for > 0 as that is the
	correct test.